[gd_scene load_steps=17 format=3 uid="uid://ybwynx8lkdr5"]

[ext_resource type="Texture2D" uid="uid://maokcyd0gft3" path="res://test-image.svg" id="1_baobv"]
[ext_resource type="Texture2D" uid="uid://b6iy3oi2bo457" path="res://ASSETS/BATTLE ASSETS/TestBG.jpg" id="1_onmo0"]
[ext_resource type="Script" uid="uid://v3ppicen8fha" path="res://BATTLE/battle.gd" id="1_p7l2w"]
[ext_resource type="Resource" uid="uid://dg8ovn803kkgp" path="res://ENEMY/Level_Resources/band_enemy1.tres" id="2_aggsg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ojeh"]
bg_color = Color(0.907942, 0.907942, 0.907942, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xx2mg"]
bg_color = Color(0, 0.91, 0.439833, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgdvl"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rpa36"]
bg_color = Color(0.258, 0.86, 0.7998, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b44uv"]
bg_color = Color(0.258824, 0.858824, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qa5nm"]
bg_color = Color(0, 0.68, 0.612, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nnucm"]
bg_color = Color(0.823529, 0.823529, 0.823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2mt1"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0509804, 0.4, 0.168627, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_w0lkc"]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionsPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(347, 920)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(405, 90)]
}

[sub_resource type="Animation" id="Animation_d4ukc"]
resource_name = "slide_action_panel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionsPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(173.5, 920), Vector2(173.5, 285)]
}

[sub_resource type="Animation" id="Animation_a5g4i"]
resource_name = "slide_enemy_icon"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(405, 90), Vector2(405, -155)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yccys"]
_data = {
&"RESET": SubResource("Animation_w0lkc"),
&"slide_action_panel": SubResource("Animation_d4ukc"),
&"slide_enemy_icon": SubResource("Animation_a5g4i")
}

[node name="Battle" type="Node2D"]
z_index = -1
script = ExtResource("1_p7l2w")
enemy = ExtResource("2_aggsg")

[node name="Background" type="TextureRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("1_onmo0")
expand_mode = 1

[node name="Enemy" type="TextureRect" parent="."]
offset_left = 405.0
offset_top = 90.0
offset_right = 555.0
offset_bottom = 240.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_baobv")

[node name="EnemyHealthBar" type="ProgressBar" parent="Enemy"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = -58.0
offset_right = 300.0
offset_bottom = -28.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_3ojeh")
theme_override_styles/fill = SubResource("StyleBoxFlat_xx2mg")
max_value = 50.0
value = 25.0
show_percentage = false

[node name="ActionsPanel" type="Panel" parent="."]
offset_left = 347.0
offset_top = 920.0
offset_right = 959.5
offset_bottom = 1095.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sgdvl")

[node name="PlayerOptions" type="Control" parent="ActionsPanel"]
anchors_preset = 0
offset_left = 25.0
offset_top = 18.5
offset_right = 45.0
offset_bottom = 38.5

[node name="Run" type="Button" parent="ActionsPanel/PlayerOptions"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 85.0
offset_right = 145.0
offset_bottom = 122.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_rpa36")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b44uv")
theme_override_styles/normal = SubResource("StyleBoxFlat_qa5nm")
text = "RUN"

[node name="Heal" type="Button" parent="ActionsPanel/PlayerOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 35.0
offset_right = 160.0
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_rpa36")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b44uv")
theme_override_styles/normal = SubResource("StyleBoxFlat_qa5nm")
text = "HEAL"

[node name="Attack" type="Button" parent="ActionsPanel/PlayerOptions"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 175.0
offset_bottom = 22.5
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_rpa36")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b44uv")
theme_override_styles/normal = SubResource("StyleBoxFlat_qa5nm")
text = "ACTION"

[node name="AttackOptions" type="Control" parent="ActionsPanel"]
anchors_preset = 0
offset_left = 225.0
offset_top = 18.5
offset_right = 245.0
offset_bottom = 38.5

[node name="Move0" type="Button" parent="ActionsPanel/AttackOptions"]
layout_mode = 0
offset_right = 175.0
offset_bottom = 62.5
theme_override_font_sizes/font_size = 25

[node name="Move1" type="Button" parent="ActionsPanel/AttackOptions"]
layout_mode = 0
offset_left = 187.5
offset_right = 362.5
offset_bottom = 62.5

[node name="Move2" type="Button" parent="ActionsPanel/AttackOptions"]
layout_mode = 0
offset_top = 75.0
offset_right = 175.0
offset_bottom = 137.5
theme_override_font_sizes/font_size = 25

[node name="Move3" type="Button" parent="ActionsPanel/AttackOptions"]
layout_mode = 0
offset_left = 187.5
offset_top = 75.0
offset_right = 362.5
offset_bottom = 137.5

[node name="PlayerPanel" type="Panel" parent="."]
offset_top = 460.0
offset_right = 960.0
offset_bottom = 540.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nnucm")

[node name="Label" type="Label" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -25.0
offset_right = 232.0
offset_bottom = 25.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "PLAYER"

[node name="PlayerHealthBar" type="ProgressBar" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -35.0
offset_right = 270.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_3ojeh")
theme_override_styles/fill = SubResource("StyleBoxFlat_xx2mg")
value = 50.0
show_percentage = false

[node name="Textbox" type="Panel" parent="."]
visible = false
offset_left = 142.5
offset_top = 350.0
offset_right = 792.5
offset_bottom = 425.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n2mt1")

[node name="Label" type="Label" parent="Textbox"]
layout_mode = 0
offset_left = 19.0
offset_top = 16.0
offset_right = 214.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "THIS IS A BATTLE TEST!"

[node name="Ticker" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -47.0
offset_right = -16.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yccys")
}

[connection signal="pressed" from="ActionsPanel/PlayerOptions/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="ActionsPanel/PlayerOptions/Heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="ActionsPanel/PlayerOptions/Attack" to="." method="_on_attack_pressed"]
[connection signal="caches_cleared" from="AnimationPlayer" to="." method="_on_animation_player_caches_cleared"]
